# LG-LDS

./: .gitignore  CMakeLists.txt  Rakefile
assets/shdr/: test.f.glsl  test.v.glsl
include/: carefulgl.hpp  debuggl.hpp  example.hpp  fileio.hpp  gpout.hpp  main.hpp  sdlnogl.hpp  sdlwindow.hpp  showdl.hpp  util.hpp  window.hpp
include/primitives/: common.hpp  cube.hpp  planar.hpp  primitives.hpp
src/: byteIO.cpp  carefulgl.cpp  debuggl.cpp  event.cpp  example.cpp  fileio.cpp  gpout.cpp  main.cpp  sdlnogl.cpp  sdlwevent.cpp  sdlwindow.cpp  view.cpp  window.cpp
